<resources>
    <string name="app_name">AudioFlow</string>
    <string name="select_mp3">Select MP3</string>
    <string name="no_song_selected">No song selected</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="song_name">Patchwork</string>
    <string name="my_image_description">Placeholder</string>
    <string name="play_all">Play All</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="search">Search for Song/Artist/Album</string>
    <string name="search_option">Search</string>
    <string name="play_settings_description">Play Settings</string>
    <string name="info">Infos</string>
    <string name="search_hint">Search for</string>
    <string name="edit">Edit</string>
    <string name="cover">Change Cover</string>
    <string name="artist_title">Title</string>
    <string name="title_label">Title:</string>
    <string name="artist">Artist</string>
    <string name="artist_label">Artist:</string>
    <string name="artist_album">Album</string>
    <string name="album_label">Album:</string>
    <string name="save_button">Save</string>
    <string name="song_info">Song Info</string>
    <string name="path_label">Path:</string>
    <string name="filename_label">File:</string>
    <string name="lyrics_label">lyrics:</string>
    <string name="playback_speed">Playback Speed:</string>
    <string name="back_button">Back</string>
    <string name="default_speed">1.0x</string>
    <string name="rename_file">Rename File</string>
    <string name="delete_file">Delete File</string>
    <string name="edit_metadata">Edit Song</string>
    <string name="close">Close</string>
    <string name="change_color">Change Color</string>
    <string name="add_timer">Add Timer</string>
    <string name="customize_player">Customize Player</string>
    <string name="car_mode">Car Mode</string>
    <string name="about_app">About App</string>
    <string name="version_info">Version %1$s\nLast updated: %2$s</string>
    <string name="channel_name">Music Playback</string>
    <string name="channel_description">Controls for music playback</string>
    <string name="reset_previous">Reset Current Song on Previous</string>
    <string name="notification_icon">Show Media Player Notification</string>
    <string name="display_on">Keep Display Always On</string>
    <string name="search_cover">Show Cover in Search Screen</string>
    <string name="all_color">Apply Color to All Screens</string>
    <string name="share">Share</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="show_album">Album Details:</string>
    <string name="show_artist">Artist Details:</string>
    <string name="switch_mode">Switch Mode</string>
</resources>
